/* 
  Localizable.strings
  TodoList

  Created by Danil Lyskin on 27.01.2022.
  
*/
"description" = "Description:";
"name" = "Name:";
"add" = "Add";
"update" = "Update";
"busy" = "Busy";
"free" = "Free";
"error getting memory info" = "Error getting memory info";
"gb" = "Gb";
"settings" = "Settings";
"batteryState" = "Battery state:";
"baseInfo" = "Info";
"todo" = "Todo";
