...
        
        res.textAlignment = .left
        res.font = UIFont(name: "Arial-Bold", size: 15)
        
        res.translatesAutoresizingMaskIntoConstraints = false
        
        res.accessibilityIdentifier = "CustomCellName"
        
        return res
    }()
    
    /**
        Описание задачи
...
        
        res.textAlignment = .left
        res.font = UIFont(name: "Arial", size: 10)
        
        res.translatesAutoresizingMaskIntoConstraints = false
        
        res.accessibilityIdentifier = "CustomCellDescriptions"
        
        return res
    }()
    
    override init(style: UITableViewCell.CellStyle, reuseIdentifier: String?) {
        super.init(style: style, reuseIdentifier: reuseIdentifier)
...
