...

    @IBOutlet weak var plusButton: UIButton! {
        didSet {
            plusButton.imageView?.frame.size = CGSize(width: 40, height: 40)
            plusButton.setTitle(nil, for: .normal)
            
            plusButton.accessibilityIdentifier = "PlusButton"
        }
    }
    @IBOutlet weak var taskTable: UITableView! {
        didSet {
            taskTable.accessibilityIdentifier = "TaskTable"
        }
    }
    
    var tasksMap = SortedMap<Date, TaskDTO>()
    
    override func viewDidLoad() {
...
